[add] favicon&theme-color

--- a/login.html
+++ b/login.html
@@ -3,7 +3,8 @@
 
 <head>
   <meta charset="utf-8">
-  <title>front_end</title>
+  <meta name="theme-color" content="#FFA31A">
+  <title>know_yourself</title>
   <style>
   body {
     background-color: #f7fafc !important;
